@stratusjs/idx fix remaining z-indexes

--- a/packages/idx/src/property/details.component.less
+++ b/packages/idx/src/property/details.component.less
@@ -1,5 +1,6 @@
 /*
 Nothing should be outside 'stratus-idx-property-details' or it will leak into other modules
+z-index can cause a bleeding effect on popups (z-index 100 equates to the top most item for angular, use the lowest number possible and work up)
 */
 @tablet: ~"(max-width: 959px)";
 @phone: ~"(max-width: 600px)";
@@ -529,7 +530,7 @@ stratus-idx-property-details {
         border: 1px solid #fff;
         background: none;
         &.btn-contact {
-          z-index: 100;
+          z-index: 1;
           transform: translate(-50%, -50%);
           position: absolute;
           top: 50%;
